# RoBA

./: .gitignore  Cargo.toml  Justfile  Makefile  README.md  go.mod  main.go
core/: Cargo.toml
core/src/: lib.rs  log_buffer.rs
core/src/apu/: mod.rs
core/src/audio/: mod.rs
core/src/bus/: mod.rs
core/src/cart/: mod.rs
core/src/cpu/: mod.rs
core/src/io/: mod.rs
core/src/mem/: mod.rs
core/src/ppu/: mod.rs  ppu_test_harness.rs
core/src/timing/: mod.rs
core/src/video/: mod.rs
cpu/: arm_instructions.go  cpu.go  instruction.go  instructions.go
embedded/: bios.go
frontends/desktop/: Cargo.toml
frontends/desktop/src/: main.rs
frontends/wasm/: Cargo.toml
frontends/wasm/src/: lib.rs
internal/_cpu/: _cpu.go  thumb_decode.go  thumb_exec.go  thumb_instructions.go
internal/apu/: apu.go
internal/bus/: bus.go
internal/cartridge/: cartridge.go
internal/cpu/: arm_decode.go  arm_exec.go  arm_instructions.go  cpu.go  registers.go
internal/dma/: controller.go
internal/interfaces/: bus.go  cpu.go  cpu_registers.go  memory.go  registers.go
internal/io/: io_regs.go
internal/joypad/: joypad.go
internal/memory/: bios.go  ewram.go  iwram.go  memory.go
internal/ppu/: ppu.go
internal/timer/: controller.go
memory/: memory.go
rom/: rom.go
util/convert/: bool-to-int.go
util/dbg/: dbg.go  debug-log.go  nodebug-log.go
