[package]
name = "desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
core = { path = "../../core" }
eframe = "0.28"
egui = "0.28"
rfd = "0.16"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
directories = "6.0.0"
toml = "0.9.5"
log = "0.4"

[dev-dependencies]
cargo-bundle = "0.8.0"

[features]
default = []
debug_logs = []

[package.metadata.bundle]
name = "RoBA"
identifier = "com.roba.emulator"
description = "A simple, cross-platform Game Boy Advance emulator built with Rust and egui."
icon = ["assets/icon.png"]
category = "Game"
linux_use_terminal = true
